Stringファイルの中身追加。 詳細画面作成途中(xib未)

--- a/algorithm/algorithm/resource/Localizable.strings
+++ b/algorithm/algorithm/resource/Localizable.strings
@@ -6,11 +6,81 @@
   
 */
 "softwareTitle" = "ソフトウェア開発事業";
-"hardwareTitle" = "ハードウェア開発";
-"substrateTitle" = "基板開発事業";
 "softwareOverview" = "システム機能へのソフトウェアへの比重は高まるばかりです。\n
 今までスピードを要求される箇所はハードで行うしかなかったのですが、プロセッサの性能が格段に向上する昨今、ソフトウェアでハードの置き換えが出来るようになってきており、ソフトウェア技術に要求される内容はハイレベルになるばかりです。";
+"softwareAWord" = "様々なアプリケーションや組込みファームウェア設計など対応させていただきます。";
+"softwareBusinessContent" =
+"■ アプリケーション/ファームウェア開発 \n
+開発言語：C/C++/Objective-C/C#/Java/HTML/Java script/ASM \n
+開発OS ：iOS/Android/Windows/Linux";
+"softwareDevelopmentResults" =
+"■ カーナビ \n
+要素技術 \n
+・WindowsCE \n
+■ フィーチャーホン開発（3G携帯） \n
+■ テレビ用/ワイヤレススピーカーシステム用リモコンアプリ（Android） \n
+■ インターフォン　アプリ開発（iOS・Android） \n
+■ その他 iOS・Android・Windows各種アプリ開発 \n
+■ 画像拡大・縮小評価ツール \n
+要素技術 \n
+・バイリニア法・バイキュービック法・アンシャープマスク \n
+・ガウスフィルタ・Prewittフィルタ・Sobelフィルタ \n
+■ リードソロモン符号・復号評価システムツール \n
+要素技術 \n
+・ピーターソン法・ユークリッド法・VCS自動起動 \n
+■ 画像補間法動作確認ツール \n
+要素技術 \n
+・ラグランジェ補間・ニュートン補間・三次補間法 \n
+■ 直交変換動作確認ツール \n
+要素技術 \n
+・DCT/ウェーブレット変換";
+
+"hardwareTitle" = "ハードウェア開発";
 "hardwareOverview" = "アナログから始まりあらゆる分野に広まっているデジタル技術など、ハードウェア技術は電子機器の機能を支える基本になる技術です。\n
 ハードウェアの技術無しに製品は成り立ちません。ハイレベルなハードウェア無しにハイレベルなソフトウェアを組み上げることは出来ないのです。";
+"hardwareAWord" = "LSI/FPGAのIPコア開発から、通信/画像/ＦＡ分野の回路設計、システム開発・ノイズ対策などのサポート及びそれらのコンサルティングを請負っておりますので遠慮なくご相談下さい。";
+"hardwareBusinessContent" =
+"■ LSIコア/FPGAのRTL設計 \n
+開発言語：Verilog-HDL/VHDL \n
+■ 各種回路設計及び開発（低周波アナログから高周波回路も可能）";
+"hardwareDevelopmentResults" =
+"■ CATVモデムチップ開発 \n
+要素技術 \n
+・等化理論(ブラインド・適応等化)・64値QAM \n
+・デジタルPLL・符号理論(ブロック符号・畳み込み符号) \n
+・差動符号/復号器・トランスバーサルフィルタ・グレイ符号 \n
+・同期検波 \n
+■ デジタルビデオタイムコード検出ボード設計 \n
+要素技術・SMPTE125M・SMPTE12M(LTC)・SMPTE266M(DVITC) \n
+・クローズドキャプション \n
+■ 衛星ラジオ開発 \n
+要素技術 \n
+・DQPSK・デジタルPLL・デジタルコスタスループ \n
+■ プロジェクター開発 \n
+要素技術 \n
+・SMPTE274M・SMPTE293M・SMPTE296M・VESA \n
+■ SDRAMコントロールコア設計(SDR・DDR兼用) \n
+■ 8251/8254/8255/16550コア設計 \n
+■ リードソロモン符号・復号コア設計(4・8・16シンボル訂正) \n
+要素技術 \n
+・ピーターソン法・ユークリッド法 \n
+■ トナージェットプリンタ評価システム開発 \n
+■ 2元BCH符号・復号コア設計(24ビット訂正) \n
+要素技術 \n
+・ユークリッド法";
+
+"substrateTitle" = "基板開発事業";
 "substrateOverview" = "評価基板を作る上においてアートワーク設計の良し悪しは重要な問題です。\n
 パターン設計が悪いとノイズなどの弊害が出て、回路の評価をするどころではなくなり多大な時間を無駄にする事となります。";
+"substrateAWord" =
+"ご要望に沿って、アートワーク設計・基板作成・実装を請負っております。\n
+アートワーク設計の良し悪しは、ほとんど各部品のレイアウトや多層板の場合はその上に内層の電源パターンで決まります。\n
+アナログ回路経験も豊富なので、部品の高密度実装化や信号の高速化、デバイスの低電圧化など求められる技術へ対応致します。";
+"substrateBusinessContent" =
+"■ PADS\n
+■ CSI";
+"substrateDevelopmentResults" =
+"■ アナログ・デジタル画像処理基板各種 \n
+■ PCI-Express基板 \n
+■ DVI/HDMI基板 \n
+■ FPGA基板（最大層数12層板）";
